# EPITECH

./: .gitignore  LICENSE  README.md
TEK1/evalexpr/: Makefile  README.md  main.c
TEK1/evalexpr/lib/my/: my_strcmp.c  my_strlowcase.c
TEK1/evalexpr/src/: evalexpr.c  extract_expr.c  full_summands.c  number.c  summands.c
TEK1/evalexpr/src/do_op/: do_op.c  function_operators.c
TEK1/evalexpr/tests/: test_better_summands.c  test_do_op.c  test_eval_expr.c  test_factors.c  test_summands.c
TEK1/my_ls/: Makefile  README.md  main.c
TEK1/my_ls/include/: local.h  my.h  struct.h
TEK1/my_ls/lib/my/: Makefile  my_printf_func_2.c  my_strdup.c  my_strlen.c  str_start_with.c
TEK1/my_ls/src/: args.c  directory.c  display.c  files.c  free.c  my_ls.c  sort.c  utils.c
TEK1/my_navy/: Makefile  README.md  main.c  player1.txt  player2.txt
TEK1/my_navy/include/: local.h
TEK1/my_navy/lib/my/: Makefile  for_str_in_str.c  my.h  my_printf.c  my_printf_func_1.c  my_putstr.c  my_strcpy.c
TEK1/my_navy/src/: display.c  get_boat_position.c  navy.c  turn.c  utils.c
TEK1/my_navy/src/client/: client.c  get_connection.c
TEK1/my_navy/src/server/: get_connection.c  server.c
TEK1/my_navy/src/signal/: signal.c  signal_get_utils.c  signal_send_utils.c  user_input.c
TEK1/my_navy/tests/: test_navy.c
TEK1/my_sh/: README.md
TEK1/ncurse_tetris/: README.md
TEK2/arcade/: README.md
TEK2/ftrace/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.c
TEK2/ftrace/include/: ftrace.h  nm.h  print.h  syscall.h  types.h
TEK2/ftrace/src/: args.c  fork.c  ftrace.c  nm.c
TEK2/ftrace/src/print/: print.c  print_int.c  print_ptr.c  print_string.c  print_uint.c
TEK2/ftrace/src/wrapper/: get.c  ptrace.c  wrapper.c
TEK2/ftrace/tests/: CMakeLists.txt
TEK2/ftrace/tests/print/: print_const_voidp.cpp  print_int.cpp  print_string.cpp  print_type.cpp  print_uint.cpp
TEK2/myftp/: .gitignore  CMakeLists.txt  Makefile  PROTOCOL.txt  README.md  main.c
TEK2/myftp/include/: ftp.h
TEK2/myftp/src/: ftp.c
TEK2/myftp/src/CLIENT/: client.c  init.c
TEK2/myftp/src/CMD/: cmd.c  files.c  list.c  pasv.c  path.c  user.c
TEK2/myftp/src/SERVER/: init.c  server.c
TEK2/myftp/src/UTILS/: client.c  cwd.c  utils.c
TEK2/panoramix/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c
TEK2/panoramix/include/: panoramix.h
TEK2/panoramix/src/: args.c  panoramix.c  print_druid.c  print_villager.c  utils.c  with_mut.c  with_sem.c
